--- a/_config.yml
+++ b/_config.yml
@@ -155,9 +155,9 @@ lang: "zh-CN"  # default lang is en
 # Page default value
 # defaults:
 #   home:
-heading: "朝花夕拾"
-subheading: ""
-banner: "Your image url"
+# heading: ""
+# subheading: ""
+# banner: "Your image url"
 
 # Banner default settings
 # These banner settings are for global banner default, but you can also
