--- a/_config.yml
+++ b/_config.yml
@@ -219,7 +219,7 @@ defaults:
 # set follow_site_theme true to make utterances' theme follow the site's
 
 utterances:
-  repo: "owner/repo"
+  repo: "NightSheepNonstop/NightSheepNonstop.github.io"
   issue_term: "title"
   label: "utterances comment"
   theme: "github-light"
