--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ yat:
 
 # Google analytics - GA4
 google_analytics: [G-N3NT014HWM]
-enableDNT: "true"
+# enableDNT: "false"
 
 # If you want to generate website sitemap, you can set true
 sitemap: true
